定义权限相关测试点

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -13,4 +13,4 @@ SENDGRID_PASSWORD: Your_Password
 ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
 ADMIN_PASSWORD: changeme
-ROLES: [admin, user, VIP]
+ROLES: [admin, investor, leader]
