--- a/config/default_categories.yml
+++ b/config/default_categories.yml
@@ -1,3 +1,12 @@
+智能硬件:
+  - 智能硬件
+  - 运动手环
+  - 儿童与宠物防丢器
+  - 移动医疗监护设备
+  - 智能家居
+  - 智能眼镜
+  - 其他智能硬件
+
 互联网:
   - 网络广告
   - 网络游戏
@@ -77,127 +86,3 @@ IT:
   - 数字电视
   - IT新材料
   - 光电科技
-
-电信及增值:
-  - 终端设施
-  - 无线增值
-  - WAP网站
-  - 手机游戏
-  - 手机电视
-  - 无线音乐
-  - 无线搜索
-  - 无线广告
-  - 电信技术
-  - 电信运营
-
-游戏:
-  - 电视游戏
-  - 单机游戏
-  - 网络游戏
-  - 客户端游戏
-  - 网页游戏
-  - 社交游戏
-  - 手机游戏
-  - 休闲游戏
-  - 虚拟世界
-
-传媒娱乐:
-  - 传统媒体
-  - 户外媒体
-  - 广告代理
-  - 影视音乐
-  - 动漫
-
-能源:
-  - 环保节能
-  - 新能源
-  - 太阳能
-  - 生物能
-  - 风能
-  - 核能
-  - 传统能源
-  - 能源设置
-
-医疗健康:
-  - 生物技术
-  - 药品行业
-  - 医疗设备
-  - 医疗服务
-  - 健康管理
-
-金融:
-  - 金融服务
-  - 银行
-  - 证券
-  - 保险
-  - 会计审计
-
-教育:
-  - 教育培训
-  - 人力资源
-  - 网络教育
-  - 应试教育
-  - 企业培训
-  - 兴趣教育
-  - 留学咨询
-
-房地产:
-  - 装饰装潢
-  - 物业管理
-  - 地产经纪
-  - 房地产开发
-
-物流仓储:
-  - 交通运输
-  - 物流服务
-  - 仓储服务
-
-农林牧渔:
-  - 农产品
-  - 林业园艺
-  - 畜牧养殖
-  - 渔业水产
-  - 农业机械
-
-旅游业:
-  - 旅游预订
-  - 导游服务
-  - 户外探险
-
-住宿与餐饮业:
-  - 酒店
-  - 餐厅
-  - 自助和快餐
-  - 冷饮
-  - 咖啡店
-  - 外卖
-
-商业服务:
-  - 管理咨询
-  - 法律服务
-  - 中介服务
-  - 外包服务
-  - 财务服务
-
-消费品:
-  - 食品
-  - 服装
-  - 烟酒
-  - 日用品
-  - 家具建材
-  - 家电
-  - 汽车
-
-文化艺术体育:
-  - 新闻出版
-  - 广播电视
-  - 文艺演出
-  - 展览展示
-  - 体育健身
-  - 娱乐场所
-
-加工制造:
-  - 机电重工
-  - 原材料
-  - 印刷
-  - 包装
