--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -6,6 +6,10 @@ ADMIN_EMAIL: admin@cywin.cn
 ADMIN_PASSWORD: admin
 ROLES: [admin, investor, leader]
 
+# GOOGLE ANYLITCS
+GA_ID: ''
+GA_URL: ''
+
 # SECRET_KEY_BASE
 SECRET_KEY_BASE: ''
 # sidekiq namespace
